--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFF;
+	background-color: white;
 }
 
 #beef {
@@ -65,7 +65,7 @@ section {
 	margin-bottom: 0;
 	margin-top: 0;
 	padding: 5px;
-	background-color: #FFF;
+	background-color: white;
 }
 
 #sushi {
@@ -78,8 +78,8 @@ section {
 	font-size: 125%;
 	margin-bottom: 0;
 	margin-top: 0;
-	background-color: #FFF;
-	color: white;
+	background-color: white;
+	color: black;
 	padding: 5px;
 }
 
